# local-asr

./: README.md  pyproject.toml
src/local_asr/: aggregate.py  cli.py  endpoint.py  events.py  state.py  tui.py
