[project]
name = "local-asr"
version = "0.1.0"
description = "Local real-time ASR from a microphone with FunASR and sounddevice."
readme = "README.md"
authors = [
    { name = "logeable", email = "logeable@gmail.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "funasr>=1.3.1",
    "modelscope>=1.34.0",
    "numpy>=2.0.0",
    "rich>=14.1.0",
    "sounddevice>=0.5.5",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
]

[project.scripts]
local-asr = "local_asr:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
